# pytorch-gans

./: README.md  gan_full.ipynb
dcgan_cifar/: README.md  config_dcgan.yaml  gan_full.ipynb
dcgan_cifar/src/: load_data.py  model.py  training.py
dcgan_cifar/training/: train_model.ipynb
gan-model/: gan_full.ipynb  training.py
hinge-sngan/: README.md  config_hinge_sngan.yaml
hinge-sngan/src/: load_data.py  loss_hinge.py  model.py  train_loop.py  training_utils.py
mnist_gan/: LICENSE  README.md  config_mnist_gan.yaml  pyproject.toml
mnist_gan/notebooks/: gan_full.ipynb  train_model.ipynb
mnist_gan/src/: load_data.py  model.py  training.py
